swipe, java7